--- a/app/src/main/res/layout/reddit_card.xml
+++ b/app/src/main/res/layout/reddit_card.xml
@@ -1,15 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:longClickable="true">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
+        style="@style/cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="1dp"
-        style="@style/cardview">
+        card_view:cardCornerRadius="1dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -35,12 +35,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginTop="2dp"
                 android:textAlignment="textStart"
-                android:textStyle="bold"
                 android:textSize="@dimen/font_size_title"
+                android:textStyle="bold"
                 card_view:layout_constraintLeft_toLeftOf="parent"
                 card_view:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="2dp"
                 card_view:layout_constraintTop_toBottomOf="@+id/subreddit" />
 
             <TextView
@@ -70,8 +70,8 @@
                 android:id="@+id/domain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginStart="0dp"
                 android:layout_marginTop="2dp"
                 android:text="@string/txt_blank_textview"
                 android:textSize="@dimen/font_size_infos"
